# trace-model

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  repro-config  requirements.txt
.repro-logs/: test_clean-demo.txt  test_run-demo.txt
demo/: run.sh  run.txt  trs-query-cells.sh
demo/01-minimal/: run.sh  run.txt
demo/01-minimal-tro/: minimal-tro.jsonld  minimal-tros.jsonld  minimal-trs.jsonld  run.sh  run.txt
demo/01-trov-vocab/: run.sh  run.txt
demo/02-type-a/: run.sh  run.txt
demo/03-type-b2/: run.txt
demo/04-report-subclass-graph/: graphviz.g  run.txt
demo/05-report-policies/: run.sh
demo/06-gpg-runtime-generate-key/: run.sh  run.txt
demo/06-gpg-runtime-simple-tro/: run.sh  run.txt
demo/07-gpg-api-generate-key/: run.sh  run.txt
demo/07-gpg-api-simple-tro/: run.sh  run.txt
demo/08-tro-fingerprint/: run.sh  run.txt  tro_fingerprint.py
demo/09-tro-fingerprint-state/: run.txt  tro_fingerprint_state.py
demo/10-timestamp/: run.sh  run.txt
demo/common/: trace-vocab.jsonld  tro-02-from-type-a-trs.jsonld  tro-03-from-type-b2-trs.jsonld  trs-01-minimal.jsonld  trs-02-type-a.jsonld  trs-queries.sh
demo/data/: trs-minimal.jsonld  trs-type-a.jsonld
demo/tmp/: C1.sh  C1.txt
demo/tro/: tro-01-from-minimal-trs.jsonld
demo/trs/: trs-02-type-a.jsonld
exports/: demo-makefile  demo-manifest  demo-setup  format-string  geist-p  trace-extensions.jsonld  trace-vocab.jsonld  tro-fingerprint
src/geist/: __main__.py
src/trace_model.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+263 files in other folders)
